# Fox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prebuild.lua
Ferret/: CMakeLists.txt
Fox/: CMakeLists.txt  prebuild.lua
Fox/src/: Fox.h  fxpch.h
Fox/src/Fox/Core/: Application.cpp  Application.h  Core.h  Entrypoint.h  Input.h  KeyCodes.h  Log.cpp  Log.h  PlatformDetection.cpp  PlatformDetection.h
Fox/src/Fox/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Fox/src/Fox/ImGui/: GUI.cpp  GUI.h
Fox/src/Fox/Layer/: Layer.h  LayerStack.cpp  LayerStack.h
Fox/src/Fox/Renderer/: GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h
Fox/src/Fox/Window/: Window.cpp  Window.h
Fox/src/Platform/GLFW/: GLFWInput.cpp  GLFWWindow.cpp  GLFWWindow.h
Fox/src/Platform/OpenGL/: OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
Fox/src/Platform/OpenGL/ImGui/: OpenGLGUI.cpp  OpenGLGUI.h
